# 2025-espresso-water

./: .gitignore  .pre-commit-config.yaml  data.dvc  dvc.yaml  eval.ipynb  main.py  params.yaml  pyproject.toml  rdf_experiment.npz  rdf_rmax_2.npz  rdf_rmax_3.npz  rdf_rmax_4.npz  rdf_rmax_5.npz  rdf_rmax_5_5.npz  rdf_rmax_6.npz  rdf_tip4p.npz  tutorial.ipynb  tutorial_MD_using_MLIP_within_ESPResSo.ipynb  tutorial_MD_with_MLIP_by_ESPResSo.ipynb  tutorial_tip4p_water.ipynb  zntrack.json
.dvc/: config
config/: apax-n_basis-4.yaml  apax-n_basis-8.yaml  apax-n_radial-5.yaml  apax-n_radial-6.yaml  apax-n_radial-7.yaml  apax-nn-16-16.yaml  apax-nn-32-32.yaml  apax-nn-64-64.yaml  apax-r_max-2.yaml  apax-r_max-3.yaml  apax-r_max-4.yaml  apax-r_max-5.5.yaml  apax-r_max-5.yaml  apax-r_max-6.yaml  apax-r_max-7.yaml  apax.yaml
